# HelloOpenCV

./: README.md  settings.gradle
CMakeTrain/: C++Train.md  CMakeLists.txt
CMakeTrain/CMakeTrain/: Box.cpp  CMakeLists.txt  CMakeTrain.cpp  CMakeTrain.h  CopyFuncApp.cpp  DestructiveFuncApp.cpp
CarRecgnize/: CMakeLists.txt
CarRecgnize/CarRecgnize/: CMakeLists.txt  CarPlateLocation.cpp  CarPlateLocation.h  CarPlateRecgnize.cpp  CarPlateRecgnize.h  CarRecgnize.cpp  CarRecgnize.h
FaceBeauty/app/: CMakeLists.txt  build.gradle
FaceBeauty/app/src/main/: AndroidManifest.xml
FaceTracing/: .gitignore
FaceTracing/app/: .gitignore  CMakeLists.txt  build.gradle
FaceTracing/app/src/main/: AndroidManifest.xml
HelloOpenCV/HelloOpenCV/: HelloOpenCV.sln
HelloOpenCV/HelloOpenCV/HelloOpenCV/: HelloOpenCV.vcxproj  Simple.cpp
HelloOpenCVInAndroid/: .gitignore
HelloOpenCVInAndroid/app/: .gitignore  build.gradle
HelloOpenCVInAndroid/app/src/main/: AndroidManifest.xml
HelloOpenCVInCmake/: HelloOpenCVInCmake.cpp  HelloOpenCVInCmake.h
HelloOpenCVInCmake/HelloOpenCVInCmake/: CMakeLists.txt  HelloOpenCVInCmake.cpp
HelloOpenCVInVS/: HelloOpenCVInVS.sln  HelloOpenCVInVS.vcxproj  HelloOpenCVInVS.vcxproj.filters  Simple.cpp
HelloOpenCVInVS/Debug/: vc142.idb
HelloOpenCVInVS/Debug/HelloOpenCVInVS.tlog/: HelloOpenCVInVS.lastbuildstate
HelloOpenCVInVS/x64/Debug/: HelloOpenCVInVS.ilk  simple.obj.enc  vc142.idb
app/: .gitignore  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  opencv-utils.cpp
(+35 files in other folders)
